flux/apps/boxarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boxarr
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://boxarr.multimedia-factory.svc:8888"
    uptime-kuma.io/name: "boxarr"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Media Acquisition"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boxarr
  template:
    metadata:
      labels:
        app: boxarr
    spec:
      enableServiceLinks: false
      containers:
        - name: boxarr
          image: ghcr.io/iongpt/boxarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: boxarr-config
              mountPath: /config
      volumes:
        - name: boxarr-config
          persistentVolumeClaim:
            claimName: boxarr-config
