flux/apps/boxarr/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: boxarr
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:L8P+rSWz8lzDP+HrUcpuDjMUqlDF6yqXqmbJFA==,iv:JlHZYBQC79NPy+GgeYUMkWF+N5j28f8Ebk4aZH8SU9A=,tag:DJ8KnSIVNnuWu2ff3+BCow==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: boxarr
              port: 8888
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPMTRkQnFsaHZlTlMxUldB
[...]
            42M0dhm7E5EUfT0AZYnX9HLLNVKR+aR0dWb4yAfq/AjQRzvlEsqnpw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-08T09:17:43Z"
    mac: ENC[AES256_GCM,data:R1K/tV/VZzPx/pngc5t0m+iJXtBjdISNV9q5Zkk6lHt6835MPQsK+buileE3ZE/DoErOqD1ox0d7fxEyjmNgNKQJc2VFnLe5W+e9OYQLL38QW7MhzscilXzHWeTjHF6iSy/byOA4Q21ocTFwt7V8xfCjhshoXrxy1YTLrJGYouQ=,iv:GH53j/PRJCqayj4fJ1Kw31Fvjipf02nH6bzRYDQ8qqw=,tag:sgtpxq3GnsC1duxpvlDXeg==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
